--- a/helloworld/helloworld/src/App.css
+++ b/helloworld/helloworld/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.App {
+  text-align: center;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -16,6 +20,12 @@
 h1{
   text-align: center;
   font-size: xx-large;
+}
+
+img {
+  display: block;
+  margin: 0 auto;
+  width: 25%;
 }
 
 .App-header {
